// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute Linea network should return failure if tx not required even if it would be successful 1`] = `
{
  "data": {
    "result": 1,
  },
  "jobRunID": "1",
  "result": 1,
  "statusCode": 200,
}
`;

exports[`execute Linea network should return success when all methods succeed 1`] = `
{
  "data": {
    "result": 0,
  },
  "jobRunID": "1",
  "result": 0,
  "statusCode": 200,
}
`;

exports[`execute Linea network should return transaction submission is successful 1`] = `
{
  "data": {
    "result": 0,
  },
  "jobRunID": "1",
  "result": 0,
  "statusCode": 200,
}
`;

exports[`execute arbitrum network should return failure if tx not required even if it would be successful 1`] = `
{
  "data": {
    "result": 1,
  },
  "jobRunID": "1",
  "result": 1,
  "statusCode": 200,
}
`;

exports[`execute arbitrum network should return success when all methods succeed 1`] = `
{
  "data": {
    "result": 0,
  },
  "jobRunID": "1",
  "result": 0,
  "statusCode": 200,
}
`;

exports[`execute arbitrum network should return transaction submission is successful 1`] = `
{
  "data": {
    "result": 0,
  },
  "jobRunID": "1",
  "result": 0,
  "statusCode": 200,
}
`;

exports[`execute base network should return failure if tx not required even if it would be successful 1`] = `
{
  "data": {
    "result": 1,
  },
  "jobRunID": "1",
  "result": 1,
  "statusCode": 200,
}
`;

exports[`execute base network should return success when all methods succeed 1`] = `
{
  "data": {
    "result": 0,
  },
  "jobRunID": "1",
  "result": 0,
  "statusCode": 200,
}
`;

exports[`execute base network should return transaction submission is successful 1`] = `
{
  "data": {
    "result": 0,
  },
  "jobRunID": "1",
  "result": 0,
  "statusCode": 200,
}
`;

exports[`execute metis network should return failure if tx not required even if it would be successful 1`] = `
{
  "data": {
    "result": 1,
  },
  "jobRunID": "1",
  "result": 1,
  "statusCode": 200,
}
`;

exports[`execute metis network should return success when all methods succeed 1`] = `
{
  "data": {
    "result": 0,
  },
  "jobRunID": "1",
  "result": 0,
  "statusCode": 200,
}
`;

exports[`execute metis network should return transaction submission is successful 1`] = `
{
  "data": {
    "result": 0,
  },
  "jobRunID": "1",
  "result": 0,
  "statusCode": 200,
}
`;

exports[`execute optimism network should return failure if tx not required even if it would be successful 1`] = `
{
  "data": {
    "result": 1,
  },
  "jobRunID": "1",
  "result": 1,
  "statusCode": 200,
}
`;

exports[`execute optimism network should return success when all methods succeed 1`] = `
{
  "data": {
    "result": 0,
  },
  "jobRunID": "1",
  "result": 0,
  "statusCode": 200,
}
`;

exports[`execute optimism network should return transaction submission is successful 1`] = `
{
  "data": {
    "result": 0,
  },
  "jobRunID": "1",
  "result": 0,
  "statusCode": 200,
}
`;

exports[`execute scroll network should return failure if tx not required even if it would be successful 1`] = `
{
  "data": {
    "result": 1,
  },
  "jobRunID": "1",
  "result": 1,
  "statusCode": 200,
}
`;

exports[`execute scroll network should return success when all methods succeed 1`] = `
{
  "data": {
    "result": 0,
  },
  "jobRunID": "1",
  "result": 0,
  "statusCode": 200,
}
`;

exports[`execute scroll network should return transaction submission is successful 1`] = `
{
  "data": {
    "result": 0,
  },
  "jobRunID": "1",
  "result": 0,
  "statusCode": 200,
}
`;

exports[`execute zksync network should return failure if tx not required even if it would be successful 1`] = `
{
  "data": {
    "result": 1,
  },
  "jobRunID": "1",
  "result": 1,
  "statusCode": 200,
}
`;

exports[`execute zksync network should return success when all methods succeed 1`] = `
{
  "data": {
    "result": 0,
  },
  "jobRunID": "1",
  "result": 0,
  "statusCode": 200,
}
`;

exports[`execute zksync network should return transaction submission is successful 1`] = `
{
  "data": {
    "result": 0,
  },
  "jobRunID": "1",
  "result": 0,
  "statusCode": 200,
}
`;
